--- a/static/index.html
+++ b/static/index.html
@@ -218,7 +218,7 @@
     <div class="container mt-2xl mb-2xl">
       <div class="row items-center">
         <div class="column align-center">
-          <h1 class="max-w-lg text-giga text-center text-white">Un panier de légumes, c'est le meilleur moyen de savourer la nature!
+          <h1 class="max-w-lg text-giga text-center text-white" data-crudui="text--bottom_punch_line">Un panier de légumes, c'est le meilleur moyen de savourer la nature!
           </h1>
          
 
@@ -312,6 +312,7 @@
       }, 1000);
     }
   </script>
+  <script src="/js/main.js" type="text/javascript"></script>
 </body>
 
 </html>
