Bun/Elysia/Docker added

--- a/static/index.html
+++ b/static/index.html
@@ -122,8 +122,8 @@
             maraîchage en moyenne montagne, je reviens en Normandie, pour recommencer l’aventure maraîchère : faire
             pousser fruits et légumes bio, en partie sous serre, sur 1 hectare, au cœur du parc naturel régional
             Normandie Maine.
-            Vente en direct le mardi et le vendredi de 16h30 à 19h et le samedi de 10h à12h.
-            Réservation de panier dès le mercredi jusqu’au vendredi 9h et récupération le vendredi.
+            Vente directe les mardis et les vendredis de 16h30 à 19h, marché de Carrouges les mercredis matins et marché d'Alençon les jeudis matins.
+            Distribution de panier les mardis et vendredis de 16h30 à 19h, réservables jusqu'à minuit la veille.
 
 
           </p>
